--- a/_includes/head.html
+++ b/_includes/head.html
@@ -123,4 +123,11 @@
   {% endif %}
 
   {% include metadata-hook.html %}
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/10.2.4/mermaid.min.js"></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', function () {
+      mermaid.initialize({ startOnLoad: true });
+    });
+  </script>
 </head>
